[gd_scene load_steps=8 format=3 uid="uid://bsbnqlf3dos6d"]

[ext_resource type="Script" uid="uid://cjm8pownfnsn6" path="res://common/autoloads/sound_manager/sound_manager.gd" id="1_t6vpl"]
[ext_resource type="AudioStream" uid="uid://cc3sj3mjxthna" path="res://assets/sounds/attack effect.wav" id="1_y453o"]
[ext_resource type="AudioStream" uid="uid://cxhycx2g2khtn" path="res://assets/sounds/summon effect.wav" id="3_drmbr"]
[ext_resource type="AudioStream" uid="uid://s724066f1lly" path="res://assets/sounds/game lost.wav" id="4_ofrrg"]
[ext_resource type="AudioStream" uid="uid://c58dm43xxawb6" path="res://assets/sounds/coins.wav" id="5_qi06l"]
[ext_resource type="AudioStream" uid="uid://bdgh1s2qwobw3" path="res://assets/sounds/button press 2.wav" id="7_igpht"]
[ext_resource type="AudioStream" uid="uid://dkmdfx13p4ure" path="res://assets/sounds/button release 2.wav" id="8_8yhf3"]

[node name="SoundManager" type="Node2D"]
process_mode = 3
script = ExtResource("1_t6vpl")

[node name="AttackEffect" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("1_y453o")

[node name="SummonEffect" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_drmbr")
pitch_scale = 2.0

[node name="RoundLost" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ofrrg")

[node name="Coins" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_qi06l")

[node name="ButtonPress2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_igpht")

[node name="ButtonRelease2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_8yhf3")
